--- a/billing/static/css/admin/main.css
+++ b/billing/static/css/admin/main.css
@@ -1,6 +1,3 @@
-body input, select, textarea {
-    background-color: #ffffff;
-}
 .sortedm2m-item img {
   max-width: 40px;
   padding: 5px;
@@ -24,11 +21,7 @@ body input, select, textarea {
   display: inline-block;
   margin: 0px 10px 0px 0px;
 }
-.ui-tabs .ui-tabs-nav li a {
-    -webkit-border-top-right-radius: 0px !important;
-    -moz-border-radius-topleft: 0px !important;
-    -webkit-border-top-left-radius: 0px !important;
-    border-top-left-radius: 0px !important;
-    border-top-right-radius: 0px !important;
-    border: 0px !important;
+#site-name #small-site-name {
+  color: #333;
+  font-size: 90%;
 }
