--- a/billing/static/css/admin/main.less
+++ b/billing/static/css/admin/main.less
@@ -23,3 +23,9 @@
         margin: 0px 10px 0px 0px;
     }
 }
+#site-name {
+    #small-site-name {
+        color: #333;
+        font-size: 90%;
+    }
+}
