--- a/billing/static/css/admin/main.less
+++ b/billing/static/css/admin/main.less
@@ -29,3 +29,15 @@
         font-size: 90%;
     }
 }
+input[type="tel"] {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 5px 6px;
+    margin-top: 0;
+}
+.errors input[type="tel"] {
+    border: 1px solid #ba2121;
+}
+input[type="tel"]:focus {
+    border-color: #999;
+}
