--- a/billing/templates/admin/filter.html
+++ b/billing/templates/admin/filter.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<h3>{{ title|capfirst }}</h3>
+<h3>{% blocktrans with filter_title=title %}{{ filter_title }}{% endblocktrans %}</h3>
 <ul class="admin-filter-{{ title|cut:' ' }}">
 {% if choices|length > 5 %}
     <li>
