--- a/finances/templates/finances/rbk.html
+++ b/finances/templates/finances/rbk.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Rbk Title {{ order.pk}}</title>
-</head>
-
-<body>
-
-    <h1>My ' First Heading</h1>
-    <p>My "" first paragraph.</p>
-
-</body>
-
-</html>
+{% load i18n %}
+<form target="_top" class="billing-payment-form" method="post" action="{{ rbk.action }}">
+    <input type="hidden" name="eshopId" value="{{ rbk.shop_id }}">
+    <input type="hidden" name="orderId" value="{{ order.pk }}">
+    <input type="hidden" name="serviceName" value="{{ rbk.service_name }}">
+    <input type="hidden" name="recipientAmount" value="{{ order.price.amount }}">
+    <input type="hidden" name="recipientCurrency" value="{{ rbk.currency }}">
+    <input type="hidden" name="user_email" value="{{ order.client.email }}">
+    <input type="hidden" name="hash" value="{{ rbk.signature }}">
+    <button class="billing-payment-button">
+       {% trans 'pay' %} {{ order.price }}
+    </button>
+</form>
