--- a/finances/templates/finances/invalid_type.html
+++ b/finances/templates/finances/invalid_type.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <p>Param "order" not found in request.</p>
+    <p>Param "order" not found in request or "order" invalid.</p>
 </body>
 
 </html>
