--- a/finances/templates/finances/bill.html
+++ b/finances/templates/finances/bill.html
@@ -81,10 +81,7 @@
                 <tr>
                     <td>Покупатель:</td>
                     <td>
-                        <strong>
-                        ава вааааааааааааааава авваааааааааааааааааааааааааааава авааввава
-                        ава вааааааааааааааава авваааааааааааааааааааааааааааава авааввава
-                        </strong>
+                        <strong>{{ order.payer.text }}</strong>
                     </td>
                 </tr>
             </tbody>
