--- a/finances/templates/finances/bill.html
+++ b/finances/templates/finances/bill.html
@@ -144,14 +144,14 @@
                         <strong>Руководитель</strong>
                     </td>
                     <td style="border-bottom: 1px solid black;" class="right">
-                        <img id="sign" src="{{ host }}{% static 'images/finances/sign.png' %}">
+                        <img id="sign1" src="{{ host }}{% static 'images/finances/sign.png' %}">
                         {{ recipient.boss }}
                     </td>
                     <td style="width: 100px; padding-left: 60px;">
                         <strong>Бухгалтер</strong>
                     </td>
                     <td style="border-bottom: 1px solid black;" class="right">
-                        <img id="sign" src="{{ host }}{% static 'images/finances/sign.png' %}">
+                        <img id="sign2" src="{{ host }}{% static 'images/finances/sign.png' %}">
                         {{ recipient.bookkeeper }}
                     </td>
                 </tr>
