--- a/finances/templates/finances/stripe.html
+++ b/finances/templates/finances/stripe.html
@@ -1,15 +1,225 @@
 {% load i18n %}
-<form action="{{ request.scheme }}://{{ request.get_host }}{% url 'finances:payment-system-response' 'stripe' %}" method="POST">
-    <script
-        src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-        data-key="{{ stripe.publishable_key }}"
-        data-amount="{{ stripe.price_in_cents }}"
-        data-name="Maxi-booking.com"
-        data-description="{{ stripe.service_name }}"
-        data-locale="auto"
-        data-email="{{ order.client.email }}"
-        data-label="pay {{ order.price }}"
-        data-currency="eur">
+{% with host=request.scheme|add:'://'|add:request.get_host %}
+<html>
+
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="googlebot" content="noindex, nofollow">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/featherlight/1.7.6/featherlight.min.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/featherlight/1.7.6/featherlight.min.js"></script>
+    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+    <script type="text/javascript" src="https://checkout.stripe.com/checkout.js"></script>
+
+    <style type="text/css">
+        #processing {
+            display: none;
+        }
+
+        #result {
+            padding: 15px;
+            display: none;
+        }
+
+        #iframe-container iframe {
+            width: 100%;
+            height: 400px;
+        }
+    </style>
+
+    <title>Stripe</title>
+
+    <script type="text/javascript">
+        //<![CDATA[
+        window.onload = function() {
+            var stripePublishableKey = '{{ stripe.publishable_key }}';
+            var amount = parseInt('{{ stripe.price_in_cents }}', 10);
+            var currency = 'eur';
+            var email = '{{ order.client.email }}';
+
+            Stripe.setPublishableKey(stripePublishableKey);
+
+            // Create Checkout's handler
+            var handler = StripeCheckout.configure({
+                key: stripePublishableKey,
+                email: email,
+                image: 'https://stripe.com/img/documentation/checkout/marketplace.png',
+                locale: 'auto',
+                allowRememberMe: true,
+                token: function(token) {
+                    // use Checkout's card token to create a card source
+                    Stripe.source.create({
+                        type: 'card',
+                        token: token.id
+                    }, stripeCardResponseHandler);
+
+                    displayProcessing();
+                }
+            });
+
+            $('#customButton').on('click', function(e) {
+                // Open Checkout with further options:
+                handler.open({
+                    name: 'Maxi-booking.com',
+                    description: '{{ stripe.service_name }}',
+                    amount: amount,
+                    currency: currency
+                });
+                e.preventDefault();
+            });
+
+            // Close Checkout on page navigation:
+            $(window).on('popstate', function() {
+                handler.close();
+            });
+
+            function displayProcessing() {
+                document.getElementById("processing").style.display = 'block';
+
+                document.getElementById("charge-form").style.display = 'none';
+                document.getElementById("result").style.display = 'none';
+            }
+
+            function displayResult(resultText) {
+                document.getElementById("processing").style.display = 'none';
+
+                document.getElementById("charge-form").style.display = 'block';
+                document.getElementById("result").style.display = 'block';
+                document.getElementById("result").innerText = 'ERROR: ' + resultText;
+            }
+
+            function stripeCardResponseHandler(status, response) {
+                if (response.error) {
+                    var message = response.error.message;
+                    displayResult("Unexpected card source creation response status: " + status + ". Error: " + message);
+                    return;
+                }
+
+                // check if the card supports 3DS
+                if (response.card.three_d_secure == 'not_supported') {
+                    displayResult("This card does not support 3D Secure.");
+                    return;
+                }
+
+                // since we're going to use an iframe in this example, the
+                // return URL will only be displayed briefly before the iframe
+                // is closed. Set it to a static page on your site that says
+                // something like "Please wait while your transaction is processed"
+                var returnURL = "{{ host }}{% url 'billing-processing' %}";
+
+                // create the 3DS source from the card source
+                Stripe.source.create({
+                    type: 'three_d_secure',
+                    amount: amount,
+                    currency: "eur",
+                    three_d_secure: {
+                        card: response.id
+                    },
+                    redirect: {
+                        return_url: returnURL
+                    }
+                }, stripe3DSecureResponseHandler);
+            }
+
+            function stripe3DSecureResponseHandler(status, response) {
+                if (response.error) {
+                    var message = response.error.message;
+                    displayResult("Unexpected 3DS source creation response status: " + status + ". Error: " + message);
+                    return;
+                }
+
+                // check the 3DS source's status
+                if (response.status == 'chargeable') {
+                    stripeTokenHandler(response);
+                    /* displayResult("This card does not support 3D Secure authentication, but liability will be shifted to the card issuer.");*/
+                    return;
+                } else if (response.status != 'pending') {
+                    displayResult("Unexpected 3D Secure status: " + response.status);
+                    return;
+                }
+
+                // start polling the source (to detect the change from pending
+                // to either chargeable or failed)
+                Stripe.source.poll(
+                    response.id,
+                    response.client_secret,
+                    stripe3DSStatusChangedHandler
+                );
+
+                // open the redirect URL in an iframe
+                // (in this example we're using Featherlight for convenience,
+                // but this is of course not a requirement)
+                $.featherlight({
+                    iframe: response.redirect.url,
+                    iframeWidth: '800',
+                    iframeHeight: '600',
+                    loading: 'Processing...', 
+                });
+            }
+
+            function stripeTokenHandler(token) {
+                var form = document.getElementById('charge-form');
+                var hiddenInput = document.createElement('input');
+                hiddenInput.setAttribute('type', 'hidden');
+                hiddenInput.setAttribute('name', 'stripeToken');
+                hiddenInput.setAttribute('value', token.id);
+                form.appendChild(hiddenInput);
+
+                form.submit();
+            }
+
+            function stripe3DSStatusChangedHandler(status, source) {
+                if (source.status == 'chargeable') {
+                    $.featherlight.current().close();
+                    /* displayResult(msg);*/
+                    stripeTokenHandler(source);
+                } else if (source.status == 'failed') {
+                    $.featherlight.current().close();
+                    var msg = '3D Secure authentication failed.';
+                    displayResult(msg);
+                } else if (source.status != 'pending') {
+                    $.featherlight.current().close();
+                    var msg = "Unexpected 3D Secure status: " + source.status;
+                    displayResult(msg);
+                }
+            }
+
+        } //]]>
     </script>
-    <input name="order_id" value="{{ order.pk }}" type="hidden">
-</form>
+</head>
+
+<body>
+    <div>
+
+        <p id="result" class="alert alert-danger"></p>
+
+        <form action="{{ host }}{% url 'finances:payment-system-response' 'stripe' %}" class="form-horizontal" id="charge-form" method="POST">
+            <input name="order_id" value="{{ order.pk }}" type="hidden">
+            <input name="stripeEmail" value="{{ order.client.email }}" type="hidden">
+            <div class="form-group">
+                <button id="customButton" class="btn btn-primary">Pay {{ order.price }}</button>
+            </div>
+        </form>
+
+        <div id="processing">
+            <p class="text-center alert alert-info">Processing...</p>
+        </div>
+
+        <div id="modal" class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-body" id="iframe-container">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</body>
+
+</html>
+
+{% endwith %}
