--- a/billing/templates/emails/registration_fail.html
+++ b/billing/templates/emails/registration_fail.html
@@ -7,5 +7,12 @@
 {% endblock %}
 
 {% block content %}
-    {% trans "Registation failed" %}
+{% blocktrans %}
+    <p>Hello!</p>
+    <p>When installing the program "Maxibooking" an error occurred.</p>
+    <p>To resolve this error, please contact support at: support@maxi-booking.com</p> 
+{% endblocktrans %}
+
+{% include "emails/sign.html" %}
+
 {% endblock %}
