email rus: new order

--- a/billing/templates/emails/registration.html
+++ b/billing/templates/emails/registration.html
@@ -13,7 +13,7 @@
     <p>To enter the program, please follow the link: {{ url }}
         and use the user's credentials:</p>
     <ul>
-        <li>username: {{ login }}</li>
+        <li>username: admin</li>
         <li>password: {{ password }}</li>
     </ul>
 
