--- a/billing/templates/emails/new_order.html
+++ b/billing/templates/emails/new_order.html
@@ -7,5 +7,16 @@
 {% endblock %}
 
 {% block content %}
-    <p><strong>#</strong>: {{ order.id }}</p>
+{% blocktrans with id=order.id created=order.created|date:'d.m.Y' expired=order.expired_date|date:'d.m.Y H:i' url=order.client.url %}
+    <p>Hello!</p>
+
+    <p>Order #{{ id }} from {{ created }} was generated to pay for 'Maxibooking'.</p>
+    <p>It must be paid before {{ expired }}</p>
+    <p>You can view the order and make a payment in the personal cabinet of the  'Maxibooking' system by clicking on the link: {{ url }} </p>
+    <p>If you have any questions, you can find on them an answer in the knowledge base of the 'Maxibooking' system at the address: https://support.maxi-booking.com or by sending an email to the support service: support@maxi-booking.com.</p>
+
+{% endblocktrans %}
+
+{% include "emails/sign.html" %}
+
 {% endblock %}
