--- a/billing/static/css/admin/main.less
+++ b/billing/static/css/admin/main.less
@@ -115,3 +115,8 @@ ul.ui-autocomplete {
 .ui-icon {
     margin-top: 0px;
 }
+
+td.field-is_enabled, td.field-is_checked,
+th.column-is_enabled, th.column-is_checked {
+    text-align: center;
+}
