--- a/billing/static/css/admin/main.less
+++ b/billing/static/css/admin/main.less
@@ -88,11 +88,18 @@ input[type="tel"]:focus {
     html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active
     {
         border: 0px;
+        background-image: none;
     }
     .ui-tabs-nav li.ui-tabs-active a,
     .ui-tabs-nav li.ui-tabs-selected a
     {
         background-color: #79aec8 !important; 
+    }
+    .ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr {
+        border-radius: 0px;
+    }
+    .ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tr {
+        border-radius: 0px;
     }
     .ui-tabs-nav li a {
         border-radius: 0px !important;
