--- a/billing/templates/filters/text_field.html
+++ b/billing/templates/filters/text_field.html
@@ -3,7 +3,7 @@
 <ul class="admin-filter-{{ title|cut:' ' }} admin-text-field-filter-ul">
     {% with choice=choices|first %}
     <li>
-        <input type="number" class="admin-text-field-filter-input"  value="">
+        <input type="text" class="admin-text-field-filter-input" style="max-width: 150px;"  value="">
         <input type="button" class="admin-text-field-filter-button" value="ok" data-url="{{ choice.query_string|iriencode }}" data-param="{{ choice.query_param }}">
     </li>
     {% endwith %}
