fix installation trans

--- a/billing/templates/emails/registration.html
+++ b/billing/templates/emails/registration.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-    {% trans "Registation successefull" %}
+    {% trans "Registration successefull" %}
 {% endblock %}
 
 {% block content %}
