--- a/finances/templates/finances/bill.html
+++ b/finances/templates/finances/bill.html
@@ -154,7 +154,7 @@
                     <td style="width: 100px; padding-left: 20px;">
                         <strong>Бухгалтер</strong>
                     </td>
-                    <td style="border-bottom: 1px solid black;" class="right">
+                    <td class="right">
                         <img id="sign2" src="{{ host }}{% static 'images/finances/sign.png' %}">
                         {{ recipient.bookkeeper }}
                     </td>
