generate login link

--- a/clients/static/css/admin/clients.less
+++ b/clients/static/css/admin/clients.less
@@ -1,4 +1,10 @@
 td.field-rooms, td.field-trial_activated, td.field-installation {
     text-align: center;
 }
+span#login-generate {
+    cursor: pointer;
+    border-bottom: 1px dotted #666;
+    margin: 0px 4px;
+    color: #666;
+}
 
