--- a/clients/static/css/admin/clients.css
+++ b/clients/static/css/admin/clients.css
@@ -3,3 +3,9 @@ td.field-trial_activated,
 td.field-installation {
   text-align: center;
 }
+span#login-generate {
+  cursor: pointer;
+  border-bottom: 1px dotted #666;
+  margin: 0px 4px;
+  color: #666;
+}
