--- a/clients/static/css/admin/clients.less
+++ b/clients/static/css/admin/clients.less
@@ -13,3 +13,11 @@ td.field-text {
         height: 6em; 
     }    
 }
+span.color {
+    min-width: 100%;
+    max-height: 8px;
+    display: inline-block;
+}
+td.field-color_html, th.column-color_html {
+    text-align: center; 
+}
