--- a/billing/static/css/admin/main.less
+++ b/billing/static/css/admin/main.less
@@ -1,3 +1,6 @@
+body {
+    height: 100%;
+}
 .sortedm2m-item {
     img {
         max-width: 40px;
@@ -126,4 +129,8 @@ ul.ui-autocomplete {
 td.field-is_enabled, td.field-is_checked,
 th.column-is_enabled, th.column-is_checked {
     text-align: center;
+}
+body.change-list div.results {
+    min-height: 200px;
+    height: calc(100vh - 330px);
 }
