--- a/finances/templates/finances/invalid_type.html
+++ b/finances/templates/finances/invalid_type.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title>Invalid request</title>
-</head>
-
-<body>
-    <p>Param "order" not found in request or "order" invalid.</p>
-</body>
-
-</html>
+{% load i18n %}
+{% spaceless %}
+<p class="danger">
+    {% trans 'The required information are not filled in: ' %}{% for field in required_fields %}{% trans field %}{% if not forloop.last %}, {% endif %}{% endfor %} 
+</p>
+{% endspaceless %}
